@@ -8,16 +8,23 @@ import io.hhplus.ecommerce.infra.product.ProductJpaRepository;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
 @RequiredArgsConstructor
 public class FindProductService {
+
     private static final Logger log = LoggerFactory.getLogger(FindProductService.class);
     private final ProductJpaRepository productJpaRepository;
 
@@ -39,18 +46,20 @@ public class FindProductService {
                 .build();
     }
 
-    /**
-     * 최근 3일간 판매 상위 5개 상품 조회
-     */
-    public List<ProductDto> getTopFiveProducts() {
-        // 최근 3일의 시작 날짜 계산 00시 기준
-        LocalDateTime startDate = LocalDate.now().minusDays(3).atStartOfDay();
 
+    /**
+     * 최근 3일간 판매 상위 5개 상품을 캐시에서 조회하고, 없으면 DB에서 조회 후 캐시에 저장
+     */
+    @Transactional(readOnly = true)
+    @Cacheable(value = "topProductsCache", key = "'topfiveproduct'")
+    public List<ProductDto> getTopFiveProducts() {
+        // DB에서 최근 3일간의 상위 5개 상품 조회
+        LocalDateTime startDate = LocalDate.now().minusDays(3).atStartOfDay();
         List<Product> topProducts = productJpaRepository.findTop5Product(startDate);
 
-        if (topProducts == null || topProducts.isEmpty()) {
-            log.error("get Top Five Products Data Null or Empty");
-            throw new ResourceNotFoundException(ErrorCode.PRODUCT_NOT_FOUND);
+        if (topProducts.isEmpty()) {
+            log.warn("No top products found in the last 3 days");
+            return Collections.emptyList();
         }
 
         return topProducts.stream()
@@ -60,6 +69,31 @@ public class FindProductService {
                         .price(product.getPrice())
                         .stock(product.getStock())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * 매일 자정에 상위 5개 상품 캐시 갱신
+     */
+    @Transactional(readOnly = true)
+    @Scheduled(cron = "0 0 0 * * *")  // 매일 자정 00시에 실행
+    @CachePut(value = "topProductsCache", key = "'topfiveproduct'")
+    public List<ProductDto> cacheTopFiveProducts() {
+        LocalDateTime startDate = LocalDate.now().minusDays(3).atStartOfDay();
+        List<Product> topProducts = productJpaRepository.findTop5Product(startDate);
+
+        if (topProducts.isEmpty()) {
+            log.warn("No top products found in the last 3 days for cache update");
+            return Collections.emptyList();
+        }
+
+        return topProducts.stream()
+                .map(product -> ProductDto.builder()
+                        .productId(product.getProductId())
+                        .name(product.getName())
+                        .price(product.getPrice())
+                        .stock(product.getStock())
+                        .build())
+                .collect(Collectors.toList());
     }
 }
